gccida/c2/alter_subreg
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/alter_subreg/src/final.c:3198:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v3; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/alter_subreg/src/final.c:3204:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v2.rtwint = ( __int64)( *xp)->fld[0]; 
                      ^~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/alter_subreg/src/final.c:3213:41: error: use of undeclared identifier 'machine_mode'
result = simplify_subreg( v3, v2.rtx, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)v2.rtwint), *( _DWORD *)&v1[1]); 
                                        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/alter_subreg/src/final.c:3213:56: error: expected expression
result = simplify_subreg( v3, v2.rtx, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)v2.rtwint), *( _DWORD *)&v1[1]); 
                                                       ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/alter_subreg/src/obj/final.o] Error 1
